<resources>

	<string name="hej">hej</string>
	<string name="_15_sec">15 sec</string>
	<string name="_15_sec_">15 sec</string>
	<string name="muzaiko_radio">Muzaiko Radio</string>
	<string name="play">play</string>
	<string name="muzaiko">Muzaiko</string>
	<string name="n_ste">næste</string>
	<string name="mainpic">mainpic</string>
	<string name="forrige">forrige</string>
	<string name="like">like</string>
	<string name="test">test</string>
	<string name="button">Button</string>
	<string name="cd_play_icon">Play music icon</string>
	<string name="cd_stop_icon">Stop music icon</string>
	<string name="specific_episode">Specifik Episode</string>

	<string name="app_name">H1 - EsperantoRadio</string>
	<string name="title_home">Hejmo</string>
	<string name="title_dashboard">Dashboard</string>
	<string name="title_notifications">Notifications</string>
	<string name="title_channel">Kanaloj</string>
	<string name="title_favorites">Favoritoj</string>
	<string name="title_search">Serĉi</string>
	<string name="title_episode">Elsendoj</string>
	<string name="title_specefic_episode">Episode Episode</string>
    <string name="channel_name">Channel Name</string>
	<string name="episode_name">Episode Name</string>
	<string name="pic">Pic</string>

</resources>