<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        android:iconTint="@color/white"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/music"
        android:title="@string/title_channel"
        android:iconTint="@color/white"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/favorite"
        android:title="@string/title_favorites"
        android:iconTint="@color/white"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search"
        android:iconTint="@color/white"/>
</menu>