<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.esperanto_menu.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_channels"
        android:name="com.example.esperanto_menu.ui.channel.ChannelFragment"
        android:label="@string/title_channel"
        tools:layout="@layout/fragment_channel" >
        <action
            android:id="@+id/action_navigation_channels_to_navigation_episodes"
            app:destination="@id/navigation_episodes" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.esperanto_menu.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.esperanto_menu.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_specefic_Episode"
        android:name="com.example.esperanto_menu.ui.episodes.SpeceficEpisodeFragment"
        android:label="@string/title_specefic_episode"
        tools:layout="@layout/specefic_episode" >
        <argument
            android:name="episodeName"
            android:defaultValue=""
            app:argType="string"
            />
        <action
            android:id="@+id/action_navigation_specefic_Episode_to_navigation_episodes"
            app:destination="@id/navigation_episodes" />
        <action
            android:id="@+id/action_navigation_specefic_Episode_to_player"
            app:destination="@id/player" />
        <action
            android:id="@+id/action_navigation_specefic_Episode_to_player2"
            app:destination="@id/player" />
    </fragment>

    <fragment
        android:id="@+id/navigation_episodes"
        android:name="com.example.esperanto_menu.ui.episodes.EpisodesFragments"
        android:label="@string/title_episode"
        tools:layout="@layout/specefic_channel" >
        <argument
            android:name="channelName"
            android:defaultValue=""
            app:argType="string"
            />
        <action
            android:id="@+id/action_navigation_episodes_to_navigation_channels"
            app:destination="@id/navigation_channels" />
        <action
            android:id="@+id/action_navigation_episodes_to_navigation_specefic_Episode"
            app:destination="@id/navigation_specefic_Episode" />
        <action
            android:id="@+id/action_navigation_episodes_to_player"
            app:destination="@id/player" />


    </fragment>

    <fragment
        android:id="@+id/player"
        android:name="com.example.esperanto_menu.musicservice.player.PlayerFragment"
        android:label="@string/play"
        tools:layout="@layout/fragment_player">
        <argument
            android:name="episodeName"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_player_to_navigation_specefic_Episode"
            app:destination="@id/navigation_specefic_Episode" />
    </fragment>


</navigation>