<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/ConstraintLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center_horizontal|center_vertical"
	android:background="@color/white"
	android:orientation="vertical"
	tools:context=".musicservice.player.PlayerFragment">


	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/musicOptions"
		android:layout_width="380dp"
		android:layout_height="141dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.516"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.857">


		<Button
			android:id="@+id/btnPlayMusic"
			android:layout_width="@dimen/optionsDim"
			android:layout_height="@dimen/optionsDim"
			android:layout_marginStart="100dp"
			android:background="@drawable/background_btn_play"
			android:contentDescription="@string/cd_play_icon"
			android:enabled="true"
			android:scaleType="centerCrop"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.491" />

		<Button
			android:id="@+id/btnPauseMusic"
			android:layout_width="@dimen/optionsDim"
			android:layout_height="@dimen/optionsDim"
			android:layout_marginStart="12dp"
			android:background="@drawable/background_btn_stop"
			android:contentDescription="@string/cd_stop_icon"
			android:enabled="false"
			android:scaleType="centerCrop"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toEndOf="@id/btnPlayMusic"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.491" />

		<ImageView
			android:id="@+id/forrige"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="34dp"
			android:layout_marginEnd="2dp"
			android:layout_marginBottom="3dp"
			android:contentDescription="@string/forrige"
			android:padding="12dp"
			android:src="@drawable/radio_forrige"
			app:layout_constraintBottom_toTopOf="@+id/backward"
			app:layout_constraintEnd_toStartOf="@+id/btnPlayMusic"
			app:layout_constraintTop_toTopOf="parent" />

		<ImageView
			android:id="@+id/næste"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="34dp"
			android:layout_marginEnd="2dp"
			android:layout_marginBottom="3dp"
			android:contentDescription="@string/n_ste"
			android:padding="12dp"
			android:src="@drawable/radio_naeste"
			app:layout_constraintBottom_toTopOf="@+id/forward"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/forward"
			android:layout_width="99dp"
			android:layout_height="31dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="1dp"
			android:layout_marginBottom="5dp"
			android:text="@string/_15_sec"
			android:textAlignment="center"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/næste"
			app:layout_constraintVertical_bias="1.0" />

		<TextView
			android:id="@+id/backward"
			android:layout_width="99dp"
			android:layout_height="31dp"
			android:layout_marginTop="4dp"
			android:layout_marginBottom="5dp"
			android:text="@string/_15_sec"
			android:textAlignment="center"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/forrige" />
	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/constraintLayout"
		android:layout_width="410dp"
		android:layout_height="140dp"
		android:layout_marginTop="258dp"
		android:layout_marginEnd="2dp"
		app:layout_constraintBottom_toTopOf="@+id/seekbar"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.75"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:id="@+id/textView8"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="382dp"
			android:layout_marginBottom="5dp"
			android:text="@string/muzaiko"
			app:layout_constraintBottom_toTopOf="@+id/textView4"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<ImageView
			android:id="@+id/like"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="101dp"
			android:layout_marginEnd="16dp"
			android:layout_marginBottom="2dp"
			android:contentDescription="@string/like"
			android:src="@drawable/like_heart"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/textView4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="301dp"
			android:fontFamily="sans-serif-condensed-medium"
			android:text="@string/muzaiko_radio"
			android:textColor="#000000"
			android:textSize="20sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView8" />

	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/seekbar"
		android:layout_width="412dp"
		android:layout_height="109dp"
		android:layout_marginEnd="2dp"
		android:layout_marginBottom="4dp"
		app:layout_constraintBottom_toTopOf="@+id/musicOptions"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

		<SeekBar
			android:id="@+id/seekBar"
			android:layout_width="match_parent"
			android:layout_height="5dp"
			android:focusable="false"
			android:max="100"
			android:progress="60"
			android:progressDrawable="@drawable/seekbar_progress"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.346" />

		<TextView
			android:id="@+id/starttid"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="1dp"
			android:layout_marginBottom="33dp"
			android:text="15.45"
			android:textColor="@color/menu_red"
			android:textSize="12sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/seekBar"
			tools:ignore="HardcodedText" />

		<TextView
			android:id="@+id/slutttid"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:layout_marginEnd="16dp"
			android:layout_marginBottom="35dp"
			android:importantForAccessibility="no"
			android:text="10.30"
			android:textAlignment="textEnd"
			android:textColor="@color/menu_red"
			android:textSize="12sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/seekBar"
			tools:ignore="HardcodedText" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>