<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ChannelView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/card"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintLeft_toLeftOf="parent"
            />

        <ImageView
        android:id="@+id/episodePic_onCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pic"
        android:src="@drawable/card_pic"
            android:layout_marginTop="8dp"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
        />

        <TextView
            android:id="@+id/channelName_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/channel_name"
            android:textColor="#000000"
            card_view:layout_constraintTop_toBottomOf="@id/episodePic_onCard"
            android:layout_marginTop="4dp"
            card_view:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="12dp"
            />

        <TextView
            android:id="@+id/episodeName_cardView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16dp"
            android:text="@string/episode_name"
            android:textColor="#000000"
            android:maxLength="17"
            card_view:layout_constraintTop_toBottomOf="@id/channelName_cardView"
            card_view:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="4dp"
             />

        <TextView
            android:id="@+id/episodeDate_cardVies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DATE"
            android:textSize="10dp"
            android:textColor="@color/black"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/episodeName_cardView"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="12dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>